editing some text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Error 200</h1>
-    <p class="zoom-area"><b>Drilon's</b> page working fine</p>
+    <p class="zoom-area"><b>Drilon's</b> page is working...</p>
     <section class="error-container">
       <span>W</span>
       <span><span class="screen-reader-text">o</span></span>
